// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/display/ZigAlertMessage renders ErrorMessage render 1`] = `
<div
  class="sc-bczRLJ bxlVqq"
  id="error"
>
  <div
    class="sc-gsnTZi dhsoie"
  >
    <svg
      color="#CC3993"
      height="24px"
      width="24px"
    />
  </div>
  <span
    class="MuiTypography-root MuiTypography-body2 css-1wlkhe7-MuiTypography-root"
  >
    test text
  </span>
</div>
`;

exports[`components/display/ZigAlertMessage renders ErrorMessage render 2`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "flex-direction",
  "2": "align-items",
  "3": "visibility",
  "_importants": {
    "align-items": "",
    "display": "",
    "flex-direction": "",
    "visibility": undefined,
  },
  "_length": 4,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "display": "flex",
    "flex-direction": "row",
    "visibility": "visible",
  },
}
`;

exports[`components/display/ZigAlertMessage renders ZigAlertMessage render 1`] = `
<div
  class="sc-bczRLJ bxlVqq"
  id="alert"
>
  <div
    class="sc-gsnTZi dhsoie"
  >
    <svg
      color="#706F82"
      height="24px"
      width="24px"
    />
  </div>
  <span
    class="MuiTypography-root MuiTypography-body2 css-xsotb5-MuiTypography-root"
  >
    test text
  </span>
</div>
`;

exports[`components/display/ZigAlertMessage renders ZigAlertMessage render 2`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "flex-direction",
  "2": "align-items",
  "3": "visibility",
  "_importants": {
    "align-items": "",
    "display": "",
    "flex-direction": "",
    "visibility": undefined,
  },
  "_length": 4,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "display": "flex",
    "flex-direction": "row",
    "visibility": "visible",
  },
}
`;

exports[`components/display/ZigAlertMessage renders ZigAlertMessage render warning 1`] = `
<div
  class="sc-bczRLJ bxlVqq"
  id="alert"
>
  <div
    class="sc-gsnTZi dhsoie"
  >
    <svg
      color="#AE9C5B"
      height="24px"
      width="24px"
    />
  </div>
  <span
    class="MuiTypography-root MuiTypography-body2 css-13jpils-MuiTypography-root"
  >
    test text
  </span>
</div>
`;

exports[`components/display/ZigAlertMessage renders ZigAlertMessage render warning 2`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "flex-direction",
  "2": "align-items",
  "3": "visibility",
  "_importants": {
    "align-items": "",
    "display": "",
    "flex-direction": "",
    "visibility": undefined,
  },
  "_length": 4,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "display": "flex",
    "flex-direction": "row",
    "visibility": "visible",
  },
}
`;
